# CMakeTemplate

./: .clang-format  .gitignore  CMakeLists.txt  README.md
helpers/: git_helper.h  git_helper.h.in
proj/: main.cpp
tests/: main.cpp  one_add_one_test.hpp
